<resources>
    <string name="app_name">FicheHEBAN</string>
    <string name="app_firstname">Prénom</string>
    <string name="app_lastname">Nom</string>
    <string name="app_tel">Téléphone</string>
    <string name="app_num">Numéro</string>
    <string name="app_street">Rue</string>
    <string name="app_zip_code">Code Postal</string>
    <string name="app_city">Ville</string>
    <string name="app_edit_identity">Modifier mon identité</string>
    <string name="app_edit_address">Modifier mon adresse</string>
    <string name="app_section_address">Mon adresse</string>
    <string name="app_profil_picture">profil picture</string>
    <string name="app_title_edit_identity">Edition de l\'identité</string>
    <string name="app_ok">Ok</string>
    <string name="app_cancel">cancel</string>
    <string name="app_unknow">Inconnu</string>
    <string name="app_title_edit_address">Édition de l\'adresse</string>
</resources>